# ptsync

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Development.md  README.md  clippy.toml
.github/workflows/: ci.yaml
docs/: cli.md  db-example-queries.md  db-schema.md  demo.tape
expiremental/auto-tagger/: Cargo.toml  README.md
expiremental/auto-tagger/src/: main.rs
expiremental/ui/: Cargo.toml  README.md
expiremental/ui/src/: main.rs
src/: album.rs  classify.rs  db_cmd.rs  dedup.rs  docs_generator.rs  exif_util.rs  file_type.rs  fs.rs  inspect.rs  main.rs  markdown.rs  media.rs  s3_fs.rs  s3_uri.rs  supplemental_info.rs  sync_cmd.rs  track_util.rs  util.rs
src/boundary_tests/: album.rs  exif.rs  file_type.rs  frontmatter.rs  mod.rs  paths.rs  supplemental.rs  zips.rs
src/db_cmd/: db_example_queries.rs  db_schema_docs.rs  db_utils.rs  record.rs  schema.rs  tests.rs
src/docs_generator/: cli.rs  db_schema.rs  demo.rs
tests/: demo.rs  sync_snapshot.rs
tests/snapshots/: sync.txt
tools/demo-generator/: Cargo.toml  README.md
tools/demo-generator/src/: main.rs
