[package]
name = "ptsync"
version = "0.1.0"

edition = "2024"
rust-version = "1.85"

description = "Merge Google Takeout and iCloud photo exports into one deduplicated, date-organized archive of ordinary files and Markdown notes"
license = "MIT"
repository = "https://github.com/paultuckey/ptsync"
keywords = ["photos", "google-takeout", "icloud", "deduplication", "backup"]
categories = ["command-line-utilities", "multimedia::images", "filesystem"]

[dependencies]
clap = { version = "4.6", features = ["derive", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0" }
csv = { version = "1.4" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sha2 = "0.11"
zip = "8.6"
chrono = "0.4"
file-format = "0.29"
yaml-rust2 = "0.11"
regex = "1.13"
strum_macros = "0.28"
turso = { version = "0.7", default-features = false }
tokio = { version = "1.53", features = ["rt", "macros"] }
nom-exif = "3.6"
hex = "0.4"
unicode-normalization = "0.1"
rayon = "1.12"
indicatif = "0.18"
tempfile = "3.27"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
md5 = "0.8.1"
