[package]
name = "ptsync-auto-tagger"
version = "0.1.0"
edition = "2024"
publish = false

# Stand-alone experimental project: declaring an empty workspace makes this its
# own workspace root, so the parent `ptsync` crate neither absorbs it as a member
# nor errors when cargo walks up looking for a workspace. It is kept out of the
# main crate on purpose — the heavier `image`/`heic` decode stack and the vision
# model call live here, away from ptsync's small, focused core.
[workspace]

[dependencies]
clap = { version = "4.6.2", features = ["derive", "wrap_help"] }
anyhow = "1.0.104"
serde_json = "1.0.150"
# Same database engine and options as the parent crate, so the queue db is an
# ordinary SQLite file.
turso = { version = "0.7.0", default-features = false }
tokio = { version = "1.53.0", features = ["rt"] }
# Blocking HTTP client — no async runtime, works inside turso's block_on. See the
# design doc's ureq-vs-reqwest note.
ureq = "2.12.1"
base64 = "0.22.1"
# Decode/resize/encode. Only the formats present in a ptsync archive are enabled
# to keep build time down; HEIC is handled by the `heic` crate below.
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif"] }
# Pure-Rust HEIC/HEIF decoder (no libheif system dependency), so iPhone/Takeout
# HEICs can be tagged too. (0.2.0 is yanked; 0.1.x has the same decode API.)
heic = "0.1.6"
# Same YAML library and emitter as the parent crate, so frontmatter written here
# stays byte-compatible with what `ptsync sync` writes (no churn between tools).
yaml-rust2 = "0.11.0"
indicatif = "0.18.6"
