[package]
name = "photos-ui3"
version = "0.1.0"
edition = "2024"
publish = false

# Stand-alone project: declaring an empty workspace makes this its own
# workspace root, so the parent `ptsync` crate neither absorbs it as a member
# nor errors when cargo walks up looking for a workspace.
[workspace]

[dependencies]
# GPUI — the same GPU-accelerated UI framework the Zed editor is built on. It
# isn't published to crates.io, so it's pulled straight from Zed's repo, pinned
# to a release tag for reproducibility (its API tracks Zed's `main`).
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.224.10" }
# Matches the version the parent ptsync crate uses; `bundled` compiles SQLite
# from source so there's no system dependency.
rusqlite = { version = "0.40", features = ["bundled"] }
# Decodes the actual photo bytes for the in-app preview. The `0.25` requirement
# unifies with the exact `image` version gpui depends on, so `image::Frame` is
# the very type `gpui::RenderImage` expects. Only jpeg/png/gif are enabled to
# keep build time down; MP4/MOV/AVI (video) fall back to a "no preview" message.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
# Pure-Rust HEIC/HEIF decoder (no system libs) for previewing iPhone photos.
# It decodes straight to BGRA — gpui's `RenderImage` byte order — and applies
# the container's rotation/mirror transforms, so no swap or EXIF step is needed.
heic = "0.1"
