[package]
name = "ptsync-demo"
version = "0.1.0"
edition = "2024"
publish = false

# Stand-alone project: declaring an empty workspace makes this its own
# workspace root, so the parent `ptsync` crate neither absorbs it as a member
# nor errors when cargo walks up looking for a workspace. Keeping it out of the
# parent also keeps these dev-only dependencies out of the published crate.
[workspace]

[dependencies]
anyhow = "1.0.102"
# Writes the asciicast event stream. Used for its string escaping, so a stray
# quote or control byte in captured output can't corrupt the cast file.
serde_json = "1.0.150"
# Matches the version the parent ptsync crate uses. Builds the fixture takeout
# zip, so the demo exercises the same zip path the README's quick start does.
zip = "8.6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
